# buttercup-mobile

./: .babelrc  .editorconfig  .eslintrc.js  .flowconfig  .gitattributes  .gitignore  .prettierrc  .travis.yml  Brewfile  CHANGELOG.md  CONTRIBUTING.md  README.md  app.json  babel.config.js  index.android.autofill.js  index.android.js  index.ios.autofill.js  index.ios.js  index.js  index.shared.js  metro.config.js  package-lock.json  package.json  shim.js  tsconfig.json
.history/: index.ios_20170213201146.js  index.ios_20170213201310.js  index.ios_20170213201515.js  index.ios_20170213201805.js  index.ios_20170213201819.js  package_20170213200607.json  package_20170213200634.json  package_20170213200644.json  package_20170213200652.json
__mocks__/: react-native-localize.js
__tests__/: App-test.js  App-test.tsx  helpers.js  index.android.js  index.ios.js
android/: .project  build.gradle  settings.gradle  test.txt
config/: i18next-scanner.config.js
crypto/: .gitignore  Cargo.toml  build-android.sh  build-ios.sh  build.sh  create-ndk-standalone.sh
crypto/.cargo/: config
crypto/src/: CryptoBindings.h  crypto.h  lib.rs
ios/: AutoFillBridge.h  AutoFillBridge.m  AutoFillHelpers.h  AutoFillHelpers.m  BCCrypto.h  BCCrypto.m  BCDerivation.h  BCDerivation.m  BCHelpers.h  BCHelpers.m  Buttercup.entitlements  Crypto.h  Crypto.m  CryptoBridge.h  CryptoBridge.m  Podfile
locales/: config.js  config.json
patches/: react-native-cell-components+0.4.4.patch
scripts/: QRScanner.template.html  build_qrview.js  jestInit.js  testAndroid.sh  testIOS.sh
source/: App.tsx  (+6 more)
(+364 files in other folders)
