[package]
name = "crypto"
version = "0.1.0"
authors = ["Sallar Kaboli <sallar.kaboli@gmail.com>"]
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# buttercup-crypto = "0.1.0"
buttercup-crypto = { path = "../../buttercup-crypto" }
hex = "^0.3"
base64 = "^0.5"
uuid = { version = "0.6", features = ["v4"] }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.10.1", default-features = false }
